<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.usuario.UsuarioFragment">

    <TextView
        android:id="@+id/txtCambiarDato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:text="@string/cambiar_correo"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtCorreoActual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:layout_below="@+id/txtCambiarDato"
        android:drawableStart="@drawable/vector_email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/correo_actual"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCambiarDato"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtCorreoNuevo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCorreoActual"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:drawableStart="@drawable/vector_email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/nuevo_correo"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCorreoActual"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtCmbiarClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/txtCorreoNuevo"
        android:text="@string/cambiar_contraseña"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_titulo_datos"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCorreoNuevo"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtClaveActual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/txtCmbiarClave"
        android:drawableStart="@drawable/vector_lock"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/constraseña_actual"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCmbiarClave"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtClaveNueva"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/txtClaveActual"
        android:drawableStart="@drawable/vector_lock"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/clave_nueva"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtClaveActual"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnCambiarClave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/boton_elipse"
        android:onClick="actualizarDatos"
        android:text="@string/cambiar_datos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtClaveNueva"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="OnClick" />
</RelativeLayout>