<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/txtRegistrarTienda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/registrar_tienda"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtNombreTienda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="12dp"
                android:ems="10"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/vector_home"
                android:hint="@string/nombre_tienda"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/txtNombrePropietario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtNombreTienda"
                android:layout_margin="12dp"
                android:ems="10"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/vector_name"
                android:hint="@string/nombres_propietario"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNombreTienda"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/txtApellidoPropietario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_below="@+id/txtNombrePropietario"
                android:ems="10"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/vector_name"
                android:hint="@string/apellidos_propietario"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNombrePropietario"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/NIT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_below="@+id/txtApellidoPropietario"
                android:ems="10"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/vector_nit"
                android:hint="@string/nit_tienda"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtApellidoPropietario"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/repetirNIT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_below="@+id/NIT"
                android:ems="10"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/vector_nit"
                android:hint="@string/repetir_nit"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/NIT"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/txtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_below="@+id/repetirNIT"
                android:ems="10"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/vector_email"
                android:hint="@string/correo"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/repetirNIT"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/txtRepetirCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_below="@+id/txtCorreo"
                android:ems="10"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/vector_email"
                android:hint="@string/repetir_correo"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtCorreo"
                app:layout_constraintVertical_bias="0.0" />


            <EditText
                android:id="@+id/txtConstraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_below="@+id/txtRepetirCorreo"
                android:ems="10"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/vector_lock"
                android:hint="@string/contraseña"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtRepetirCorreo"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/txtRepetirContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_below="@+id/txtConstraseña"
                android:ems="10"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/vector_lock"
                android:hint="@string/repetir_contraseña"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtConstraseña"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtRepetirContraseña"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="12dp"
                android:background="@drawable/boton_elipse"
                android:onClick="goToActivityLogin"
                android:text="@string/registrar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtRepetirContraseña"
                app:layout_constraintVertical_bias="0.0" />

        </RelativeLayout>
    </ScrollView>

</LinearLayout>